--- a/4_VectorSpaceModel.ipynb
+++ b/4_VectorSpaceModel.ipynb
@@ -33,9 +33,13 @@
     "소개 : https://www.slideshare.net/lucypark/nltk-gensim\n",
     "http://www.sfs.uni-tuebingen.de/~ddekok/ir/lectures/14vcat.pdf\n",
     "\n",
+    "one-hot encoding(4.1.4): \n",
+    "\n",
     "문서 내에 특정 단어가 **없을 경우**, 벡터 내 해당 차원에 할당된 값은 0이다. \n",
     "\n",
     "문서 내에 특정 단어가 **있을 경우**, 벡터 내 해당 차원에 할당된 값은 1 이상의 값이다.\n",
+    "\n",
+    "frequency(4.1.5): \n",
     "\n",
     "만약 문서 내에 특정 단어가 2번 출현했다면 해당 차원의 값은 2이다. \n",
     "\n",
@@ -43,16 +47,39 @@
     "\n",
     "이런 BoW가 여러 개 모여서 매트릭스 형태를 가지고 있는 것이 벡터 공간 모델(Vector Space Model)이다. \n",
     "\n",
+    "단어의 순서가 무시되기 때문에 이를 보완하기위해 n-gram을 사용한다. \n",
     "\n",
-    "## 4.1.3. N-grams \n",
     "\n",
-    "<br>\n",
-    "Word n-grams are groups of _N_(or fewer) consecutive words that you can extract from a sentence. The same concept may also be applied to characters instead of words \n",
+    "## 4.1.3. One-hot encoding\n",
     "\n",
-    "The term _bag_ here refers to the fact that you are dealing with a _set of tokens_ rather than a list or sequence: the tokens have no specific order. This family of tokenization methods is called _bag-of-words_. \n",
+    "문자열을 숫자 벡터로 치환하는 방법 중 하나. \n",
     "\n",
-    "extracting n-grams is a form of **_feature engineering_**\n",
-    "<br>\n",
+    "#### 단어가 있는지(1) 없는지(0)만 봄\n",
+    "\n",
+    "단어 집합의 크기를 가진 벡터를 만들고, 표현하고 싶은 단어의 인덱스에 1을 부여하고, 그렇지 않은 인덱스에는 0을 부여한다.\n",
+    "\n",
+    "문장: \"Life is short. Learn Python\"\n",
+    "\n",
+    "토큰별 생성된 테이블:\n",
+    "\n",
+    "| 0      | 1      | 2    | 3    | 4    |\n",
+    "|--------|--------|------|------|------|\n",
+    "| Life | is | short | Learn | Python |\n",
+    "\n",
+    "(벡터 표현)\n",
+    "\n",
+    "각 '1'의 값은 위치값을 알려줌\n",
+    "\n",
+    "```\n",
+    "* Life -> [1, 0, 0, 0, 0] \n",
+    "* is -> [0, 0, 1, 0, 0]\n",
+    "```\n",
+    "표현: <br>\n",
+    "(document #, 0 or 1) e.g., 1번째 document = 0, 인덱스 값이 1인 단어 (\"is\") (0,1)\n",
+    "\n",
+    "\n",
+    "## 4.1.4. N-grams \n",
+    "\n",
     "<br>\n",
     "1. Example 2-grams <br>\n",
     "\n",
@@ -95,28 +122,11 @@
     "[ \"John likes\", \"likes to\", \"to watch\", \"watch movies\", \"Mary likes\", \"likes movies\", \"movies too\", ]\n",
     "\n",
     "\n",
-    "## 4.1.3. One-hot encoding\n",
+    "## 4.1.5. Frequency\n",
     "\n",
-    "문자열을 숫자 벡터로 치환하는 방법 중 하나. \n",
+    "각 문헌 안에 단어가 몇 번 등장했는지 봄. 각 단어에 할당되는 값 = 출현 빈도수\n",
     "\n",
-    "단어 집합의 크기를 가진 벡터를 만들고, 표현하고 싶은 단어의 인덱스에 1을 부여하고, 그렇지 않은 인덱스에는 0을 부여한다.\n",
-    "\n",
-    "문장: \"Life is short. Learn Python\"\n",
-    "\n",
-    "토큰별 생성된 테이블:\n",
-    "\n",
-    "| 0      | 1      | 2    | 3    | 4    |\n",
-    "|--------|--------|------|------|------|\n",
-    "| Life | is | short | Learn | Python |\n",
-    "\n",
-    "(벡터 표현)\n",
-    "\n",
-    "각 '1'의 값은 위치값을 알려줌\n",
-    "\n",
-    "```\n",
-    "* Life -> [1, 0, 0, 0, 0] \n",
-    "* is -> [0, 0, 1, 0, 0]\n",
-    "```"
+    "#### 아래 TDM와 TF-IDF에서 더 자세히 설명"
    ]
   },
   {
@@ -142,6 +152,7 @@
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
     "corpus = ['you know I want your love. because I love you.']\n",
     "vector = CountVectorizer()\n",
     "print(vector.fit_transform(corpus).toarray()) # 코퍼스로부터 각 단어의 빈도 수를 기록한다.\n",
@@ -168,21 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 1 1 1 1 1 1 1 1 1 1]]\n",
-      "{'문재인': 5, '대통령이': 3, '11일': 0, '미국': 6, '워싱턴': 8, '백악관에서': 7, '도널드': 4, '트럼프': 10, '대통령과': 2, '정상회담을': 9, '가졌다': 1}\n"
+      "[[1 1 1 1 1 1 1 1 1 1 1 1]]\n",
+      "{'문재인': 5, '대통령이': 3, '11일': 0, '미국': 6, '워싱턴': 9, '백악관에서': 8, '도널드': 4, '트럼프': 11, '대통령과': 2, '백악관': 7, '정상회담을': 10, '가졌다': 1}\n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "corpus = ['문재인 대통령이 11일 미국 워싱턴 백악관에서 도널드 트럼프 대통령과 정상회담을 가졌다.']\n",
+    "corpus = ['문재인 대통령이 11일 미국 워싱턴 백악관에서 도널드 트럼프 대통령과 백악관 정상회담을 가졌다.']\n",
     "vector = CountVectorizer()\n",
     "print(vector.fit_transform(corpus).toarray()) # 코퍼스로부터 각 단어의 빈도 수를 기록한다.\n",
     "print(vector.vocabulary_) # 각 단어의 인덱스가 어떻게 부여되었는지를 보여준다"
@@ -206,23 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 1\n",
-      "  2 1 1 1 1 1 1 1 1 2 2 1 1 1]]\n",
-      "{'자사고': 33, '폐지': 46, '논란과': 11, '갈등이': 2, '이어지고': 28, '있다': 32, '교육부가': 6, '자사고의': 35, '전기': 37, '선발': 22, '폐지와': 47, '일반고': 30, '중복지원': 39, '금지를': 9, '담은': 13, '초중등교육법': 41, '시행령': 24, '개정을': 5, '추진해': 42, '갈등을': 1, '빚은데': 19, '이어': 27, '재지정': 36, '평가를': 45, '둘러싼': 16, '극한': 8, '대치로': 14, '홍역을': 49, '치르고': 43, '이는': 26, '자사고와': 34, '사전': 20, '협의': 48, '없이': 25, '기준점을': 10, '상향하고': 21, '교육청이': 7, '감사': 3, '지적': 40, '등을': 17, '이유로': 29, '감점할': 4, '있는': 31, '점수를': 38, '12점으로': 0, '대폭': 15, '높이는': 12, '수순': 23, '통보했기': 44, '때문이다': 18}\n"
+      "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 1 2\n",
+      "  1 1 1 1 1 1 1 2 2 1 1 1]]\n",
+      "{'자사고': 32, '폐지': 44, '논란과': 11, '갈등이': 2, '이어지고': 28, '있다': 31, '교육부가': 6, '자사고의': 34, '전기': 36, '선발': 22, '폐지와': 45, '일반고': 30, '중복지원': 38, '금지를': 9, '담은': 13, '초중등교육법': 40, '시행령': 24, '개정을': 5, '추진해': 41, '갈등을': 1, '빚은데': 19, '이어': 27, '재지정': 35, '평가를': 43, '둘러싼': 16, '극한': 8, '대치로': 14, '홍역을': 47, '이는': 26, '자사고와': 33, '사전': 20, '협의': 46, '없이': 25, '기준점을': 10, '상향하고': 21, '교육청이': 7, '감사': 3, '지적': 39, '등을': 17, '이유로': 29, '감점할': 4, '점수를': 37, '12점으로': 0, '대폭': 15, '높이는': 12, '수순': 23, '통보했기': 42, '때문이다': 18}\n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "corpus = [\"\"\"\"\"\"]\n",
-    "vector = CountVectorizer()\n",
+    "corpus = [\"\"\"자사고 폐지 논란과 갈등이 이어지고 있다. 교육부가 자사고의 전기 선발 폐지와 일반고 중복지원 금지를 담은 초중등교육법 시행령 개정을 추진해 갈등을 빚은데 이어, 자사고 재지정 평가를 둘러싼 극한 대치로 홍역을 치르고 있다. 이는 자사고와 사전 협의 없이 재지정 기준점을 상향하고, \n",
+    "교육청이 감사 지적 등을 이유로 감점할 수 있는 점수를 12점으로 대폭 높이는 등 ‘폐지 수순’의 평가를 통보했기 때문이다.\"\"\"]\n",
+    "vector = CountVectorizer(stop_words = [\"치르고\",\"있는\"])\n",
     "print(vector.fit_transform(corpus).toarray()) # 코퍼스로부터 각 단어의 빈도 수를 기록한다.\n",
     "print(vector.vocabulary_) # 각 단어의 인덱스가 어떻게 부여되었는지를 보여준다"
    ]
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1.3 단어-문헌 행렬 (Term-Document Matrix)\n",
+    "## 4.1.6 단어-문헌 행렬 (Term-Document Matrix)\n",
     "\n",
     "단어 문서 행렬(Term-Document Matrix, TDM)이란 다수의 문서에서 등장하는 각 단어들의 빈도를 행렬로 변환한 것을 뜻한다. 즉, 각 문서에 대한 BoW를 하나의 행렬로 만든 것으로 생각할 수 있으며, BoW 표현 방법 중 하나라고 볼 수 있다. \n",
     "\n",
@@ -277,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +309,7 @@
        "       [1, 1, 1, 1, 0, 0, 0, 1]], dtype=int64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +329,7 @@
        "['football', 'games', 'john', 'likes', 'mary', 'movies', 'play', 'watch']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -410,12 +422,13 @@
        "2         1      1     1      1     0       0     0      1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "#view as a data frame\n",
     "#Create data frame\n",
     "pd.DataFrame(bag_of_words.toarray(), columns=feature_names)"
@@ -423,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,29 +505,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#실습\n",
-    "#직접 TDM을 만들어보세요 \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#셀을 하나 더 만들고 싶다면 <esc> + <b>를 누르면 됩니다. "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----"
+    "#### 응용\n",
+    "- TDM 만들기"
    ]
   },
   {
@@ -617,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +669,7 @@
        " 'character': 1}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -848,14 +843,320 @@
        "2  0.000000  0.000000  0.000000  0.000000  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(book_vector.toarray(), columns=feature_names)"
+    "pd.DataFrame(book_vector.toarray(), columns=book_vector_names)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### 심화. \n",
+    " Cosine 유사도를 이용하여 문서 간 유사도 구하기\n",
+    " \n",
+    " 참조: Cosine similarity based on tf-idf score. http://blog.christianperone.com/2013/09/machine-learning-cosine-similarity-for-vector-space-models-part-iii/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = (\n",
+    "\"The sky is blue\",\n",
+    "\"The sun is bright\",\n",
+    "\"The sun in the sky is bright\",\n",
+    "\"We can see the shining sun, the bright sun\",\n",
+    "\"sun is hot\",\n",
+    "\"In the summer, it's very hot and sunny\",\n",
+    "\"I hate the hot weather\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 5)\t0.6387085483562188\n",
+      "  (0, 0)\t0.7694487573949885\n",
+      "  (1, 7)\t0.6555948618438714\n",
+      "  (1, 1)\t0.7551128241024088\n",
+      "  (2, 5)\t0.6620685404334281\n",
+      "  (2, 7)\t0.4913311714105653\n",
+      "  (2, 1)\t0.5659142406484144\n",
+      "  (3, 7)\t0.7087999922008041\n",
+      "  (3, 1)\t0.4081971923400896\n",
+      "  (3, 4)\t0.5753065471744678\n",
+      "  (4, 7)\t0.6555948618438714\n",
+      "  (4, 3)\t0.7551128241024088\n",
+      "  (5, 3)\t0.4484383430387477\n",
+      "  (5, 6)\t0.6320217767184382\n",
+      "  (5, 8)\t0.6320217767184382\n",
+      "  (6, 3)\t0.4484383430387477\n",
+      "  (6, 2)\t0.6320217767184382\n",
+      "  (6, 9)\t0.6320217767184382\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words = \"english\")\n",
+    "tfidf_matrix = tfidf_vectorizer.fit_transform(documents)\n",
+    "\n",
+    "print(tfidf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 blue\n",
+      "1 bright\n",
+      "2 hate\n",
+      "3 hot\n",
+      "4 shining\n",
+      "5 sky\n",
+      "6 summer\n",
+      "7 sun\n",
+      "8 sunny\n",
+      "9 weather\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, feature in enumerate(tfidf_vectorizer.get_feature_names()):\n",
+    "    print (i,feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.        , 0.42286884, 0.        , 0.        ,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.        , 1.        , 0.74944329, 0.77292057, 0.42980462,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.42286884, 0.74944329, 1.        , 0.57926013, 0.32211419,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.        , 0.77292057, 0.57926013, 1.        , 0.46468563,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.        , 0.42980462, 0.32211419, 0.46468563, 1.        ,\n",
+       "        0.33862154, 0.33862154],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.33862154,\n",
+       "        1.        , 0.20109695],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.33862154,\n",
+       "        0.20109695, 1.        ]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cos = cosine_similarity(tfidf_matrix[:], tfidf_matrix)\n",
+    "cos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.423</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.749</td>\n",
+       "      <td>0.773</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.423</td>\n",
+       "      <td>0.749</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.579</td>\n",
+       "      <td>0.322</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.773</td>\n",
+       "      <td>0.579</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.465</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.322</td>\n",
+       "      <td>0.465</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.339</td>\n",
+       "      <td>0.339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.339</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.339</td>\n",
+       "      <td>0.201</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0      1      2      3      4      5      6\n",
+       "0  1.000  0.000  0.423  0.000  0.000  0.000  0.000\n",
+       "1  0.000  1.000  0.749  0.773  0.430  0.000  0.000\n",
+       "2  0.423  0.749  1.000  0.579  0.322  0.000  0.000\n",
+       "3  0.000  0.773  0.579  1.000  0.465  0.000  0.000\n",
+       "4  0.000  0.430  0.322  0.465  1.000  0.339  0.339\n",
+       "5  0.000  0.000  0.000  0.000  0.339  1.000  0.201\n",
+       "6  0.000  0.000  0.000  0.000  0.339  0.201  1.000"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "round(pd.DataFrame(cos),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity(tfidf_matrix[0],tfidf_matrix[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.42286884]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity(tfidf_matrix[0],tfidf_matrix[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
